[project]
name = "blog-generation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "langgraph-cli[inmem]>=0.4.14",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
]
